--- a/src/components/NavBar/Navbar.module.css
+++ b/src/components/NavBar/Navbar.module.css
@@ -4,17 +4,34 @@
 .nav {
     grid-area: n;
     background-color: mediumturquoise;
+    padding: 20px;
 }
 
-.item {
-    color: white;
-}
+/*.item {*/
+/*    color: white;*/
+/*}*/
 
 
 .item a {
     color: white;
+    text-decoration: none;
 }
-
-.item.active {
+.item a.active {
     color: gold;
 }
+
+/*.nav {*/
+/*    grid-area: n;*/
+/*    background-color: burlywood;*/
+/*    padding: 20px;*/
+/*}*/
+
+/*.item a {*/
+/*    color: white;*/
+/*    text-decoration: none;*/
+/*}*/
+
+/*.item a.activeLink {*/
+/*    color: gold;*/
+/*}*/
+
