--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,17 @@
 
-
-
 .header {
+    display: flex;
     grid-area: h;
-    background-color: cadetblue;
+    background-color: lightslategrey;
+    justify-content: center;
 }
 
 .header img {
-    width: 70px;
-    margin: 10px;
+    width: 80px;
+    margin: 15px;
 }
+
+.header h1 {
+
+}
+
