--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,10 +1,9 @@
 
-
-
 .profile {
     background-color: lightslategrey;
 }
 
 .profile img {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
 }
