--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,17 +1,9 @@
 
-
-
-.item {
-    color: greenyellow;
+.post {
+    /*padding: 10px;*/
 }
 
-.item img {
-    width: 30px;
-    border:solid darkblue;
-    border-radius: 10px;
+.post img {
+    width: 80px;
+    height: auto;
 }
-
-.posts {
-    margin-top: 10px;
-}
-
