--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,18 +1,18 @@
 
 
-.nav a {
-    padding: 5px;
-    color: white;
-    display: block;
-    text-decoration: none;
-}
 
 .nav {
     grid-area: n;
-    background-color: aqua;
-    width: 10vw;
+    background-color: burlywood;
+    padding: 20px;
 }
 
 .item {
-    color: blue;
+    color: white;
 }
+
+.active {
+    color: gold ;
+}
+
+
